# isla-lang

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  coq-isla-lang.opam  dune  dune-project  fix-substs.sed  isla-lang-coq.opam  isla-lang.opam  isla_lang.ml  isla_lang.ott  litmus.v  main.ml  traces.v
coq/: isla_lang.v
etc/: headache_config
