(library
 (name isla_lang)
 (public_name isla-lang)
 (flags (:standard -warn-error -A -w -27 -w -26))
 (modules (:standard \ main))
 (libraries pprint))

(executable
 (name main)
 (public_name isla-lang)
 (flags (:standard -warn-error -A -w -27 -w -26))
 (modules main)
 (libraries pprint isla_lang))

(rule
 (targets isla_lang_parser.mly isla_lang_parser_pp.ml isla_lang_lexer.mll
   isla_lang_ast.ml isla_lang.v)
 (deps isla_lang.ott fix-substs.sed)
 (action
  (progn
    (run ott -show_sort false -quotient_rules false -aux_style_rules false -i
      isla_lang.ott -o isla_lang_parser.mly -o isla_lang_lexer.mll -o
      isla_lang_ast.ml -o isla_lang.v)
    (run sed -i -f fix-substs.sed isla_lang_ast.ml isla_lang.v))))

(rule
 (target ott.path)
 (action (with-stdout-to ott.path (system "opam var ott:share"))))

(rule
 (target ottlib.mly)
 (action
  (copy "%{read-lines:ott.path}/menhir_library_extra.mly" ottlib.mly)))

(menhir
 (modules isla_lang_parser ottlib)
 (merge_into isla_lang_parser)
 (infer true))

(ocamllex
 (modules isla_lang_lexer))

(rule
 (target isla_lang_quotiented.tex)
 (deps isla_lang.ott)
 (action
  (run ott -quotient_rules true -i isla_lang.ott -o isla_lang_quotiented.tex)))

;FIXME broken (triggered by dune language version update)
;(rule
; (target isla_lang_quotiented.pdf)
; (deps isla_lang_quotiented.tex)
; (mode promote)
; (action
;  (ignore-stdout
;   (run pdflatex isla_lang_quotiented.tex))))

(rule
 (target isla_lang_unquotiented.tex)
 (deps isla_lang.ott)
 (action
  (run ott -quotient_rules false -i isla_lang.ott -o
    isla_lang_unquotiented.tex)))

;FIXME broken (triggered by dune language version update)
;(rule
; (target isla_lang_unquotiented.pdf)
; (deps isla_lang_unquotiented.tex)
; (mode promote)
; (action
;  (ignore-stdout
;   (run pdflatex isla_lang_unquotiented.tex))))

(install
 (files isla_lang.ott)
 (section share)
 (package isla-lang))

(rule
 (target lang.v)
 (deps isla_lang.v)
 (action
  (with-stdout-to %{target}
   (system "sed '2,/(\\*REAL_START\\*)/d' %{deps}"))))

(coq.theory
 (name isla)
 (package isla-lang)
 (modules lang)
 (synopsis "Isla language library."))
